// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagePlanBlock matches snapshot - index 0 renders "First" 1`] = `
<DocumentFragment>
  <li
    class="message-plan-block extra-message-plan-block-class"
    data-testid="message-plan-block-First"
  >
    <div
      aria-hidden="true"
      class="message-plan-block-number"
    >
      1
    </div>
    <h2
      class="nhsuk-heading-m nhsuk-u-padding-top-1"
    >
      First message
    </h2>
  </li>
</DocumentFragment>
`;

exports[`MessagePlanBlock matches snapshot - index 1 renders "Second" 1`] = `
<DocumentFragment>
  <li
    class="message-plan-block extra-message-plan-block-class"
    data-testid="message-plan-block-Second"
  >
    <div
      aria-hidden="true"
      class="message-plan-block-number"
    >
      2
    </div>
    <h2
      class="nhsuk-heading-m nhsuk-u-padding-top-1"
    >
      Second message
    </h2>
  </li>
</DocumentFragment>
`;

exports[`MessagePlanBlock matches snapshot - index 2 renders "Third" 1`] = `
<DocumentFragment>
  <li
    class="message-plan-block extra-message-plan-block-class"
    data-testid="message-plan-block-Third"
  >
    <div
      aria-hidden="true"
      class="message-plan-block-number"
    >
      3
    </div>
    <h2
      class="nhsuk-heading-m nhsuk-u-padding-top-1"
    >
      Third message
    </h2>
  </li>
</DocumentFragment>
`;

exports[`MessagePlanBlock matches snapshot - index 3 renders "Fourth" 1`] = `
<DocumentFragment>
  <li
    class="message-plan-block extra-message-plan-block-class"
    data-testid="message-plan-block-Fourth"
  >
    <div
      aria-hidden="true"
      class="message-plan-block-number"
    >
      4
    </div>
    <h2
      class="nhsuk-heading-m nhsuk-u-padding-top-1"
    >
      Fourth message
    </h2>
  </li>
</DocumentFragment>
`;

exports[`MessagePlanBlock matches snapshot - index 4 renders "Fifth" 1`] = `
<DocumentFragment>
  <li
    class="message-plan-block extra-message-plan-block-class"
    data-testid="message-plan-block-Fifth"
  >
    <div
      aria-hidden="true"
      class="message-plan-block-number"
    >
      5
    </div>
    <h2
      class="nhsuk-heading-m nhsuk-u-padding-top-1"
    >
      Fifth message
    </h2>
  </li>
</DocumentFragment>
`;

exports[`MessagePlanBlock matches snapshot - index 5 renders "Sixth" 1`] = `
<DocumentFragment>
  <li
    class="message-plan-block extra-message-plan-block-class"
    data-testid="message-plan-block-Sixth"
  >
    <div
      aria-hidden="true"
      class="message-plan-block-number"
    >
      6
    </div>
    <h2
      class="nhsuk-heading-m nhsuk-u-padding-top-1"
    >
      Sixth message
    </h2>
  </li>
</DocumentFragment>
`;
